# swap-it-module-server

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Readme.md  pyproject.toml
.cert/: OPCUA-Client-S7-1500-OPCUA_X.509 Certificate_3.der  OPCUA-Client-S7-1500-OPCUA_X.509 Certificate_3.pem
.devcontainer/: Dockerfile  devcontainer.json
examples/: config1.json  config2.json  minimal.py
include/swapit/: module_server.h
nodesets/: CMakeLists.txt
nodesets/common/: .gitignore  CommonModelDesign.csv  CommonModelDesign.xml  LICENSE  README.md  SWAP.Fraunhofer.Common.Model.NodeSet2.xml  SWAP.Fraunhofer.Common.Model.Types.bsd
nodesets/common/.github/workflows/: build_and_deploy_documentation.yml
nodesets/common/docs/source/: conf.py  contact.rst  custom_data_types.rst  enums.rst  glossary.rst  index.rst  object_types.rst  related_projects.rst  structures.rst
nodesets/pfdl/: Pfdl.Model.xml  Pfdl.NodeIds.csv  Pfdl.NodeSet2.xml  Pfdl.Types.bsd  compile_model.sh
python/: CMakeLists.txt  bindings.cpp
python/swapit_module_server/: __init__.py  module_server.py
src/: CMakeLists.txt  module_server.cpp
